Use of *form-check-left* Class
-- CSS efficiency for checkboxes needing left-alignment in max-width 767px wide views
-- Layout update using form-check-left for Checkboxes needing left-alignment in max-width 767px wide views

--- a/ROA_S1-3_optional.html
+++ b/ROA_S1-3_optional.html
@@ -155,23 +155,23 @@
                             <div class="row">
                                 <div class="col-xs-12 form-group form-group-md">		
                                     <input class="form-check-input checkmark" type="checkbox" value="aorchange" tabindex="0" aria-labelledby="aor" id="aoredit">
-                                    <label class="form-check-label form-check" for="aoredit" id="aor"><span class="radio notspecial">Appoint, replace or withdraw attorney of record</span></label>
+                                    <label class="form-check-label form-check form-check-left" for="aoredit" id="aor"><span class="radio notspecial">Appoint, replace or withdraw attorney of record</span></label>
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="ownaddchange" tabindex="0" aria-labelledby="ownaddr" id="ownaddre">
-                                    <label class="form-check-label form-check" for="ownaddre" id="ownaddr"><span class="radio notspecial">Correct or change the owner&#8217;s name or entity information</span></label>
+                                    <label class="form-check-label form-check form-check-left" for="ownaddre" id="ownaddr"><span class="radio notspecial">Correct or change the owner&#8217;s name or entity information</span></label>
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="editmark" tabindex="0" aria-labelledby="changemark" id="minorchange">
-                                    <label class="form-check-label form-check" for="minorchange" id="changemark"><span class="radio notspecial">Make a minor change to the mark or submit a better quality image</span></label>
+                                    <label class="form-check-label form-check form-check-left" for="minorchange" id="changemark"><span class="radio notspecial">Make a minor change to the mark or submit a better quality image</span></label>
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="modgs" tabindex="0" aria-labelledby="modgss" id="modify">
-                                    <label class="form-check-label form-check" for="modify" id="modgss"><span class="radio notspecial">Modify goods/services</span></label>		
+                                    <label class="form-check-label form-check form-check-left" for="modify" id="modgss"><span class="radio notspecial">Modify goods/services</span></label>		
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="makechange" tabindex="0" aria-labelledby="change" id="changefile">
-                                    <label class="form-check-label form-check" for="changefile" id="change">
+                                    <label class="form-check-label form-check form-check-left" for="changefile" id="change">
                                     	<span class="radio notspecial">
                                             <ul>Add, change or withdraw any of the following:
                                                 <li>Miscellanous Statement</li>
