--- a/filing_basis_ab.html
+++ b/filing_basis_ab.html
@@ -311,7 +311,7 @@
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenone" tabindex="0" aria-labelledby="individualspecimen_1" id="">
-                                                                <label class="form-check-label form-check" for="" id="individualspecimen_1"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
+                                                                <label class="form-check-label form-check form-check-left" for="" id="individualspecimen_1"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen" role="alert"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12 form-group form-group-md upload">
@@ -366,7 +366,7 @@
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimentwo" tabindex="0" aria-labelledby="individualspecimen_2" id="">
-                                                                <label class="form-check-label form-check" for="" id="individualspecimen_2"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
+                                                                <label class="form-check-label form-check form-check-left" for="" id="individualspecimen_2"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen" role="alert"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12 form-group form-group-md upload">
@@ -475,7 +475,7 @@
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenthree" tabindex="0" aria-labelledby="individualspecimen_3" id="">
-                                                                <label class="form-check-label form-check" for="" id="individualspecimen_3"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
+                                                                <label class="form-check-label form-check form-check-left" for="" id="individualspecimen_3"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen" role="alert"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12 form-group form-group-md upload">
@@ -530,7 +530,7 @@
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenfour" tabindex="0" aria-labelledby="individualspecimen_4" id="">
-                                                                <label class="form-check-label form-check" for="" id="individualspecimen_4"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
+                                                                <label class="form-check-label form-check form-check-left" for="" id="individualspecimen_4"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen" role="alert"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12 form-group form-group-md upload">
@@ -638,7 +638,7 @@
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenfive" tabindex="0" aria-labelledby="individualspecimen_5" id="">
-                                                                <label class="form-check-label form-check" for="" id="individualspecimen_5"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
+                                                                <label class="form-check-label form-check form-check-left" for="" id="individualspecimen_5"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen" role="alert"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12 form-group form-group-md upload">
@@ -693,7 +693,7 @@
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimensix" tabindex="0" aria-labelledby="individualspecimen_6" id="">
-                                                                <label class="form-check-label form-check" for="" id="individualspecimen_6"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
+                                                                <label class="form-check-label form-check form-check-left" for="" id="individualspecimen_6"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen" role="alert"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12 form-group form-group-md upload">
