--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -305,7 +305,7 @@
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenseven" tabindex="0" aria-labelledby="individualspecimen_1" id="">
-                                                                <label class="form-check-label form-check" for="" id="individualspecimen_1"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
+                                                                <label class="form-check-label form-check form-check-left" for="" id="individualspecimen_1"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen" role="alert"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12 upload">
@@ -483,7 +483,7 @@
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimeneight" tabindex="0" aria-labelledby="individualspecimen_2" id="">
-                                                                <label class="form-check-label form-check" for="" id="individualspecimen_2"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
+                                                                <label class="form-check-label form-check form-check-left" for="" id="individualspecimen_2"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen" role="alert"><!--toggle 'yes' radio-->
                                                                 <div class="col-xs-12 upload">
