--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -222,7 +222,7 @@
                                     <legend>Select the type of mark you are applying for</legend>
                                     <div>
                                         <input class="form-check-input checkmark" type="checkbox" value="Trademark / Servicemark" tabindex="0" aria-labelledby="tradeserv2" id="tradeserv">
-                                        <label class="form-check-label form-check" for="tradeserv" id="tradeserv2"><span class="radio notspecial">Trademark / Servicemark</span></label>
+                                        <label class="form-check-label form-check form-check-left" for="tradeserv" id="tradeserv2"><span class="radio notspecial">Trademark / Servicemark</span></label>
                                     </div>
                                     <div role="heading" aria-level="3">
                                         <button type="button" class="btn btn-link Accordion-trigger ablock" data-toggle="collapse" data-target="#markoptions" aria-controls="markoptions" aria-expanded="false" id="optionsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Expand for uncommon mark types</button>
