--- a/petition_torevive_ROA_S2_(2month-1stclaim_final).html
+++ b/petition_torevive_ROA_S2_(2month-1stclaim_final).html
@@ -280,7 +280,7 @@
                                             <p class="weight600">In order to revive the application please read and acknowledge the following statement:</p>
                                             <div class="form-group form-group-md">
                                                 <input class="form-check-input checkmark" type="checkbox" value="acceptrevives1" tabindex="0" aria-labelledby="acceptrevive" id="useracceptrevive" name="user-accept-checkbox">
-                                                <label class="form-check-label form-check" for="useracceptrevive" id="acceptrevive"><span class="radio notspecial">In submitting this petition, the signatory confirms that he/she has firsthand knowledge that the delay in filing a response to the office action on or before the deadline was unintentional.</span></label>
+                                                <label class="form-check-label form-check form-check-left" for="useracceptrevive" id="acceptrevive"><span class="radio notspecial">In submitting this petition, the signatory confirms that he/she has firsthand knowledge that the delay in filing a response to the office action on or before the deadline was unintentional.</span></label>
                                             </div>
                                             <p class="weight600" id="action">Did you receive the <a href="images/revise_s1.pdf" target="_blank">office action<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>?</p>
                                             <div role="radiogroup" aria-describedby="action" class="form-group form-group-md">
