--- a/post_reg_incontestable.html
+++ b/post_reg_incontestable.html
@@ -293,42 +293,42 @@
                             	<div class="row basis">
                                 	<div class="col-xs-12">		
                                         <input class="form-check-input checkmark" type="checkbox" value="selectall" tabindex="0" aria-labelledby="selall" id="select">
-                                        <label class="form-check-label form-check" for="select" id="selall"><span class="radio notspecial">Select all</span></label>
+                                        <label class="form-check-label form-check form-check-left" for="select" id="selall"><span class="radio notspecial">Select all</span></label>
                                 	</div>
                                 </div>
                                 <fieldset aria-label="class18">
                                     <div class="card-text noexpand blue">
                                         <input class="form-check-input checkmark" type="checkbox" value="class18" tabindex="0" aria-labelledby="class18" id="class_18">
-                                        <label class="form-check-label form-check" for="class_18" id="class18"><span class="radio notspecial weight600">Class 18</span></label>
+                                        <label class="form-check-label form-check form-check-left" for="class_18" id="class18"><span class="radio notspecial weight600">Class 18</span></label>
                                     </div>
                                     <div class="row basis">
                                         <div class="col-xs-12">
                                             <input class="form-check-input checkmark" type="checkbox" value="18gs" tabindex="0" aria-labelledby="class18barsoap" id="18barsoap" disabled>
-                                        	<label class="form-check-label form-check" for="18barsoap" id="class18barsoap"><span class="radio notspecial special strike">Bar Soap</span></label>
+                                        	<label class="form-check-label form-check form-check-left" for="18barsoap" id="class18barsoap"><span class="radio notspecial special strike">Bar Soap</span></label>
                                         </div>
                                     </div>
                                     <div class="row basis">
                                         <div class="col-xs-12">
                                             <input class="form-check-input checkmark" type="checkbox" value="18gs" tabindex="0" aria-labelledby="class18bathsoap" id="18bathsoap">
-                                        	<label class="form-check-label form-check" for="18bathsoap" id="class18bathsoap"><span class="radio notspecial">Liquid Bath Soap</span></label>
+                                        	<label class="form-check-label form-check form-check-left" for="18bathsoap" id="class18bathsoap"><span class="radio notspecial">Liquid Bath Soap</span></label>
                                         </div>
                                     </div>
                                 </fieldset>
                                 <fieldset aria-label="class019"> 
                                     <div class="card-text noexpand blue">
                                         <input class="form-check-input checkmark" type="checkbox" value="class19" tabindex="0" aria-labelledby="class19" id="class_19">
-                                        <label class="form-check-label form-check" for="class_19" id="class19"><span class="radio notspecial weight600">Class 19</span></label>
+                                        <label class="form-check-label form-check form-check-left" for="class_19" id="class19"><span class="radio notspecial weight600">Class 19</span></label>
                                     </div>
                                     <div class="row basis">
                                         <div class="col-xs-12">
                                             <input class="form-check-input checkmark" type="checkbox" value="19gs" tabindex="0" aria-labelledby="class19barsoap" id="19barsoap">
-                                        	<label class="form-check-label form-check" for="19barsoap" id="class19barsoap"><span class="radio notspecial">Bar Soap</span></label>
+                                        	<label class="form-check-label form-check form-check-left" for="19barsoap" id="class19barsoap"><span class="radio notspecial">Bar Soap</span></label>
                                         </div>
                                     </div>
                                     <div class="row basis">
                                         <div class="col-xs-12">
 											<input class="form-check-input checkmark" type="checkbox" value="19gs" tabindex="0" aria-labelledby="class19bathsoap" id="18bathsoap">
-                                        	<label class="form-check-label form-check" for="18bathsoap" id="class19bathsoap"><span class="radio notspecial">Liquid Bath Soap</span></label>
+                                        	<label class="form-check-label form-check form-check-left" for="18bathsoap" id="class19bathsoap"><span class="radio notspecial">Liquid Bath Soap</span></label>
                                         </div>
                                     </div>
                                </fieldset>
