--- a/post_reg_optional.html
+++ b/post_reg_optional.html
@@ -155,19 +155,19 @@
                             <div class="row">
                                 <div class="col-xs-12 form-group form-group-md">		
                                     <input class="form-check-input checkmark" type="checkbox" value="aorchange" tabindex="0" aria-labelledby="aor" id="aoredit">
-                                    <label class="form-check-label form-check" for="aoredit" id="aor"><span class="radio notspecial">Appoint, replace or withdraw attorney of record</span></label>
+                                    <label class="form-check-label form-check form-check-left" for="aoredit" id="aor"><span class="radio notspecial">Appoint, replace or withdraw attorney of record</span></label>
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="ownaddchange" tabindex="0" aria-labelledby="ownaddr" id="ownaddre">
-                                    <label class="form-check-label form-check" for="ownaddre" id="ownaddr"><span class="radio notspecial">Correct or change the owner&#8217;s name or entity information</span></label>
+                                    <label class="form-check-label form-check form-check-left" for="ownaddre" id="ownaddr"><span class="radio notspecial">Correct or change the owner&#8217;s name or entity information</span></label>
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="editcert" tabindex="0" aria-labelledby="changecert" id="certchange" disabled>
-                                    <label class="form-check-label form-check" for="certchange" id="changecert"><span class="radio notspecial special">Request an Amendment or Correction of the Registration Certificate</span></label>
+                                    <label class="form-check-label form-check form-check-left" for="certchange" id="changecert"><span class="radio notspecial special">Request an Amendment or Correction of the Registration Certificate</span></label>
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="misc" tabindex="0" aria-labelledby="miscstate" id="statemisc">
-                                    <label class="form-check-label form-check" for="statemisc" id="miscstate"><span class="radio notspecial">Add change or withdraw the miscellanous statement</span></label>		
+                                    <label class="form-check-label form-check form-check-left" for="statemisc" id="miscstate"><span class="radio notspecial">Add change or withdraw the miscellanous statement</span></label>		
                                 </div>
                             </div>
                         </div>
