--- a/petition_torevive_SOU_S2_(within6month-noexten).html
+++ b/petition_torevive_SOU_S2_(within6month-noexten).html
@@ -284,7 +284,7 @@
                                             <p class="weight600">In order to revive the application please read and acknowledge the following statement:</p>
                                             <div class="form-group form-group-md">
                                                 <input class="form-check-input checkmark" type="checkbox" value="acceptrevives1" tabindex="0" aria-labelledby="acceptrevive" id="useracceptrevive" name="user-accept-checkbox">
-                                                <label class="form-check-label form-check" for="useracceptrevive" id="acceptrevive"><span class="radio notspecial">In submitting this petition, the signatory confirms that he/she has firsthand knowledge that the failure to respond to the Office Action by the specified deadline was unintentional; and requests the USPTO to revive the abandoned application.</span></label>
+                                                <label class="form-check-label form-check form-check-left" for="useracceptrevive" id="acceptrevive"><span class="radio notspecial">In submitting this petition, the signatory confirms that he/she has firsthand knowledge that the failure to respond to the Office Action by the specified deadline was unintentional; and requests the USPTO to revive the abandoned application.</span></label>
                                             </div>
                                             <p class="weight600" id="action">Did you receive the Notice of Abandonment issued on 11/26/2017?</p>
                                             <div role="radiogroup" aria-describedby="action" class="form-group form-group-md">
