--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -19,6 +19,7 @@
 --> <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--<link rel="stylesheet" href="usPTO.css">-->
     <link rel="stylesheet" href="css/reset.css">
@@ -234,7 +235,7 @@
                                             <section aria-label="mark text">
                                             	<div class="col-xs-12">
                                                 	<p class="weight600" aria-level="3">Mark Literal <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
-                                                	<p>Enter the word(s), letter(s) and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set" target="_blank">USPTO standard character set<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>  <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a>.</p>
+                                                	<p>Enter the word(s), letter(s), and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set" target="_blank">USPTO standard character set<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>  <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a>.</p>
                                                 </div>
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md" id="entertext">
                                                     <label for="ta2standard" class="sr-only">Enter mark text</label> 
@@ -499,7 +500,7 @@
     <script type="application/javascript">
 			function checkForm(theForm) {
 				var why = "";
-				why  = checkText(theForm.ta2standard.value, "Enter the word(s), letter(s) and/or number(s) you wish to register, e.g., THE CAT'S MEOW.");
+				why  = checkText(theForm.ta2standard.value, "Enter the word(s), letter(s), and/or number(s) you wish to register, e.g., THE CAT'S MEOW.");
 				var attorneyfirstnameval = document.getElementById("ta2standard").value;
 				var highlightattorneyfirstname = document.getElementById("ta2standard");
 					if (attorneyfirstnameval) {
