--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/lynnstyles.css">
 </head>
-<body onload="ShowChromeAlert()">
+<body>
 	<div id="skipnav"><a href="#dashboardmain">Skip navigation</a></div>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
@@ -137,6 +137,13 @@
               <div class="row">
                 <div class="col-xs-12" id="dashsectionscontainer">
                     <h1>eFile Homepage</h1>
+                    	<div class="col-xs-12 form-group form-group-md alert alert-warning" role="alert" aria-live="assertive" id="alertmin">
+                          <div class="closepans" id="minholder">
+                          	<p id="mintext"></p>
+                          	<button type="button" class="close closegspanels" aria-label="close alert" id="alertbtndash"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
+                            <button type="button" class="close closegspanels" aria-label="close alert" id="cancelbtndash"><span aria-hidden="true" class="glyphicon glyphicon-ban-circle"></span></button>
+                          </div>
+                        </div>
                         <div class="row">
                             <div class="col-xs-12 form-group form-group-md" id="dashboard">
                                 <div class="row">
@@ -405,8 +412,8 @@
 	<!--<script type="application/javascript" src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.colVis.min.js"></script>-->
     <!--<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>-->
     <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-   	<script type="application/javascript" src="js/tab_panels.js"></script>
     <script type="application/javascript" src="js/lynnjqueryscript.js"></script>
+	<script type="application/javascript" src="js/tab_panels.js"></script>
     <footer>
         <div class="container-fluid">
             <div class="row">
